tweak animation and index

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@ title: Podee
   </div>
   <div class="row text-center mb-5">
     <div class="col-12 col-sm-4">
-      <img class="img-fluid" style="min-height: 200px;" src="{{ "/assets/tablet-orderpad.png" | relative_url }}"/>
+      <img class="img-fluid" style="height: 220px;" src="{{ "/assets/tablet-orderpad.png" | relative_url }}"/>
       <h3>Order</h3>
       <p>Take orders from any device, anywhere</p>
     </div>
     <div class="col-12 col-sm-4">
-      <svg xmlns="http://www.w3.org/2000/svg" width="200px" height="200px" fill="none" viewBox="0 0 100 100">
+      <svg xmlns="http://www.w3.org/2000/svg" width="220px" height="220px" fill="none" viewBox="0 0 100 100">
         <!--BG-->
         <path d="M 90 5 H 5 V 90 H 90 Z"
               stroke-linejoin="round"
-              stroke-width="2"
+              stroke-width="3"
               stroke="#221e1f"
               fill="#fff"></path>
         <!--Guidelines-->
@@ -55,14 +55,14 @@ title: Podee
         <line x1="75" y1="85" x2="75" y2="15" stroke="green" stroke-width="10" class="bar-three"></line>
       </svg>
       <h3>Analytics</h3>
-      <p>See your business grow</p>
+      <p>See your business grow and analyse your sales</p>
     </div>
     <div class="col-12 col-sm-4">
       <svg xmlns="http://www.w3.org/2000/svg" version="1.1"
            viewBox="0 0 100 100"
            y="0" x="0"
-           width="200px"
-           height="200px">
+           width="220px"
+           height="220px">
         <g style="transform-origin: 50% 50% 0px;">
           <path d="M90 77.2H10V59.6c0-5.2 4.2-9.4 9.4-9.4h61.2c5.2 0 9.4 4.2 9.4 9.4v17.6z"
                 stroke-linejoin="round"
@@ -84,7 +84,7 @@ title: Podee
         </g>
       </svg>
       <h3>Receipt printing</h3>
-      <p></p>
+      <p>Easily print receipts for customers, the kitchen, and delivery drivers</p>
     </div>
     <div class="col-12 mt-4 mb-5">
       <a class="btn btn-outline-light" href="{{ "/features" | relative_url }}">Explore all features</a>
