--- a/features.html
+++ b/features.html
@@ -5,55 +5,48 @@ title: Podee
 <div class="container text-white">
   <h1 class="display-1 text-center">Features</h1>
   <div class="row mb-3">
-    <div class="col text-center">
-      <img src="https://via.placeholder.com/350"/>
+    <div class="col-12 col-sm-6 text-center">
+      <img class="img-fluid" src="{{ "/assets/responsive-orderpad.png" }}"/>
     </div>
-    <div class="col d-flex flex-column justify-content-center">
+    <div class="col-12 col-sm-6 d-flex flex-column justify-content-center">
       <h2 class="text-center">Take orders on any device</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
+      <p>
+        Podee supports all device sizes. Take orders from your phone, tablet or a desktop computer.
+      </p>
     </div>
   </div>
   <div class="row mb-3">
-    <div class="col text-center">
+    <div class="col-12 col-sm-6 text-center">
       <img src="https://via.placeholder.com/350"/>
     </div>
-    <div class="col d-flex flex-column justify-content-center">
+    <div class="col-12 col-sm-6 d-flex flex-column justify-content-center">
       <h2 class="text-center">Store and search customer data</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
+      <p>
+        Reduce errors and speed up placing orders. Customers who have ordered before will have their information saved
+        so you don't need to ask again.
+      </p>
     </div>
   </div>
-  <div class="row mb-5">
-    <div class="col text-center">
+  <div class="row mb-3">
+    <div class="col-12 col-sm-6 text-center">
       <img src="https://via.placeholder.com/350"/>
     </div>
-    <div class="col d-flex flex-column justify-content-center">
+    <div class="col-12 col-sm-6 d-flex flex-column justify-content-center">
       <h2 class="text-center">Analyse and improve business performance</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
+      <p>
+        Easily view your past business performance or your popular items ordered.
+      </p>
     </div>
   </div>
   <div class="row mb-5">
-    <div class="col text-center">
+    <div class="col-12 col-sm-6 text-center">
       <img src="https://via.placeholder.com/350"/>
     </div>
-    <div class="col d-flex flex-column justify-content-center">
+    <div class="col-12 col-sm-6 d-flex flex-column justify-content-center">
       <h2 class="text-center">Print orders and receipts</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
+      <p>
+        Print receipts for your customers, for your kitchen staff, and for your delivery drivers.
+      </p>
     </div>
   </div>
   <h3 class="display-3 text-center">Roadmap and upcoming features</h3>
@@ -64,11 +57,10 @@ title: Podee
   <div class="row mb-5">
     <div class="col">
       <ul>
-        <li>Item one</li>
-        <li>Item one</li>
-        <li>Item one</li>
-        <li>Item one</li>
-        <li>Item one</li>
+        <li>Automatic weekly/monthly performance reports</li>
+        <li>Allow customers to order straight from their home or table</li>
+        <li>Integration with Deliveroo / Just Eat</li>
+        <li>Manage reservations</li>
       </ul>
     </div>
   </div>
