--- a/pricing.html
+++ b/pricing.html
@@ -11,16 +11,24 @@ title: Podee
     <div class="col-12 col-sm-6 mt-1">
       <div class="card shadow-lg text-dark">
         <div class="card-body">
-          <h5 class="card-title">Introductory rate</h5>
-          <p class="card-text">0.5% on orders processed</p>
+          <h3 class="card-title">Introductory rate</h3>
+          <p class="card-text">
+            0.5% on orders processed<br>
+            New features and updates<br>
+            Customer support
+          </p>
         </div>
       </div>
     </div>
     <div class="col-12 col-sm-6 mt-1">
       <div class="card shadow-lg text-dark text-decoration-line-through">
         <div class="card-body">
-          <h5 class="card-title">Normal rate</h5>
-          <p class="card-text">1% on orders processed</p>
+          <h3 class="card-title">Normal rate</h3>
+          <p class="card-text">
+            1% on orders processed<br>
+            New features and updates<br>
+            Customer support
+          </p>
         </div>
       </div>
     </div>
@@ -30,6 +38,7 @@ title: Podee
   </div>
   <div class="text-center">
     <h3>Sign up now</h3>
+    <p>Try for free for 30 days</p>
   </div>
   {% include sign-up-form.html %}
 </div>
