--- a/sign-up.html
+++ b/sign-up.html
@@ -6,6 +6,7 @@ title: Podee
   <div class="row text-center">
     <div class="col">
       <h1 class="display-1">Sign up</h1>
+      <p>Try for free for 30 days</p>
     </div>
   </div>
   {% include sign-up-form.html %}
