--- a/features.html
+++ b/features.html
@@ -6,7 +6,7 @@ title: Podee
   <h1 class="display-1 text-center">Features</h1>
   <div class="row mb-3">
     <div class="col-12 col-sm-6 text-center">
-      <img class="img-fluid" src="{{ "/assets/responsive-orderpad.png" }}"/>
+      <img class="img-fluid" src="{{ "/assets/responsive-orderpad.png" | relative_url }}"/>
     </div>
     <div class="col-12 col-sm-6 d-flex flex-column justify-content-center">
       <h2 class="text-center">Take orders on any device</h2>
