--- a/pricing.html
+++ b/pricing.html
@@ -33,6 +33,9 @@ title: Podee
       </div>
     </div>
     <div class="col-12 mt-3">
+      <p>Custom rates available for businesses that process large volume of orders</p>
+    </div>
+    <div class="col-12 mt-3">
       <p><small>Receipt printer provided with a 100% refundable deposit after 3 months</small></p>
     </div>
   </div>
