--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 permalink: /404.html
 layout: default
 ---
-<div class="container text-center text-white my-5">
+<div class="container text-center my-5">
   <h1 class="display-1">404</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
