--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,7 @@ layout: default
 title: Podee
 includeJS: true
 ---
-<div class="container h-100 text-white">
+<div class="container h-100">
   <div class="text-center">
     <h1 class="display-1">Pricing</h1>
     <p>No setup fee. No monthly subscription or fees.</p>
