--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@ layout: default
 title: Podee
 includeJS: true
 ---
-<div class="container text-white">
+<div class="container">
   <div class="row text-center">
     <div class="col">
       <h1 class="display-1">Sign up</h1>
