create docker image

--- a/404.html
+++ b/404.html
@@ -5,5 +5,5 @@ layout: default
 <div class="container text-center my-5">
   <h1 class="display-1">404</h1>
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>The requested page could not be found. Please email info@podee.app</p>
 </div>
