--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Podee
+title: Podee - EPOS software
+description: Affordable EPOS software to make sales at your business more efficient and reliable. Save your business money and increase customer satisfaction.
 ---
 <div class="container-fluid text-center">
   <img class="img-fluid" src="{{ "/assets/responsive-orderpad.png" | relative_url }}" />
