--- a/pricing.html
+++ b/pricing.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Podee
+title: Pricing - EPOS software
+description: Affordable prices to save your business money and make your customers happy.
 includeJS: true
 ---
 <div class="container h-100">
