--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@ layout: default
 title: Podee - EPOS software
 description: Affordable EPOS software to make sales at your business more efficient and reliable. Save your business money and increase customer satisfaction.
 ---
-<div class="container-fluid text-center">
-  <img class="img-fluid" src="{{ "/assets/responsive-orderpad.png" | relative_url }}" />
-</div>
 <div class="container">
   <div class="text-center mb-5">
     <h1 class="display-1">PODEE</h1>
     <h2>EPOS Anywhere</h2>
   </div>
+</div>
+<div class="container-fluid text-center">
+  <img class="img-fluid" src="{{ "/assets/responsive-orderpad.png" | relative_url }}" />
+</div>
+<div class="container">
   <div class="row text-center mb-5">
     <div class="col-12 col-sm-4">
       <img class="img-fluid" style="height: 220px;" src="{{ "/assets/tablet-orderpad.png" | relative_url }}"/>
