--- a/pricing.html
+++ b/pricing.html
@@ -7,7 +7,7 @@ includeJS: true
 <div class="container h-100">
   <div class="text-center">
     <h1 class="display-1">Pricing</h1>
-    <p>No setup fee. No monthly subscription or fees.</p>
+    <p>No setup fee. No monthly subscription.</p>
   </div>
   <div class="row text-center mb-5">
     <div class="col-12 col-sm-6 mt-1">
@@ -35,7 +35,7 @@ includeJS: true
       </div>
     </div>
     <div class="col-12 mt-3">
-      <p>Custom rates available for businesses that process large volume of orders</p>
+      <p>Custom rates available for businesses that process large volumes of orders</p>
     </div>
     <div class="col-12 mt-3">
       <p><small>Receipt printer provided with a 100% refundable deposit after 3 months</small></p>
